[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renamable"
version = "0.1"
description = "A Python package for renaming class attributes"
readme = "README.md"
authors = [
    { name = "George Ogden", email = "george-ogden@outlook.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/George-Ogden/renamable"

[tool.setuptools]
py-modules = ["renamable"]
